--- a/namasteReact/package.json
+++ b/namasteReact/package.json
@@ -4,7 +4,7 @@
   "description": "Learning React",
   "scripts": {
     "test": "jest",
-    "dev": "parcel helloWorld.html",
+    "build": "parcel helloWorld.html",
     "prod": "parcel build helloWorld.html"
   },
   "repository": {
